<resources>
    <string name="app_name">Mooyee</string>
    <string name="feedback_info">If you have any issues with the app or feedback, please contact our customer service.\nEmail address: info@mooyee.net</string>
    <string name="menu_settings">Settings</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="network_anomaly">Network anomaly</string>
    <string name="please_fill_in_the_note_name">Please fill in the note name.</string>
    <string name="note_name_length_not_more_than_8">Note the name of the length of not more than 8.</string>
    <string name="input_phone_num">Enter Phone num</string>
    <string name="register">Enter</string>
    <string name="phone_num_null">Phone number cannot be blank! </string>
    <string name="pls_edit_accurate_phone_num">Please enter the correct phone number!</string>
    <string name="device_list_sliding">Slide the Device list left will appear items!</string>
    <string name="closing_device">Closing device...</string>
    <string name="doing">Doing</string>
    <string name="end_massage">End_massage</string>
    <string name="device_closed_or_not">Connect the device have been closed or not</string>
    <string name="del_device">Delete device</string>
    <string name="del_runing_device">Is in running state, removing equipment will stop action, sure you want to remove the equipment? </string>
    <string name="close_success_device">Close the success </string>
    <string name="are_connected_devices">Sending command to the device, Please wait...</string>
    <string name="please_try_restart_ble">Please try to restart before using bluetooth.</string>
    <string name="piracy_devices">for piracy devices, please support genuine. Remove the pirated equipment after use.</string>
    <string name="currently_no_device">Currently there is no match to the device </string>
    <string name="connection_is_broken">connection is broken!</string>
    <string name="modify_the_note_name">Modify the note name </string>
    <string name="prompt">prompt</string>
    <string name="prompt_sdk23">Android6.0 system Bluetooth scanning function needs to open the location of services to use, otherwise the search is not the equipment, please open the location services!</string>
    <string name="rename">rename</string>
    <string name="updata_app_title">Software Upgrading</string>
    <string name="updata">Updata</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="unknow">Unknow</string>
    <string name="device">Device</string>
    <string name="connect_failure">Connection failed!</string>
    <string name="device_connect_failure">Device connection failed!</string>
    <string name="close">Off</string>
    <string name="share">Share</string>
    <string name="relax_shop">Relax</string>
    <string name="music">Music</string>
    <string name="music_title">Music</string>
    <string name="device_title">Device</string>
    <string name="other">Other</string>
    <string name="other_title">Other</string>
    <string name="room_can_not_delete">is the official relax pavilion, cannot be deleted!</string>
    <string name="del_room_dialog_msg_start">Are you sure to delete relaxed pavilion&#160;</string>
    <string name="del_room_dialog_msg_end">&#160;?</string>
    <string name="low">Low</string>
    <string name="middle">Middle</string>
    <string name="high">High</string>
    <string name="power_updata">The intensity of adjustment</string>
    <string name="add_new_shop">Add</string>
    <string name="save">Save</string>
    <string name="input_shop_name">Enter a name</string>
    <string name="select_pic">Choose a picture</string>
    <string name="select_music">Choose a music</string>
    <string name="no_select_music">No choice of music!</string>
    <string name="no_select_pic_toast">Please choose a picture first!</string>
    <string name="no_select_music_toast">Please choose a music first!</string>
    <string name="set_device_action">Set device mode</string>
    <string name="base_action">Basic action </string>
    <string name="scene_action">Scene</string>
    <string name="pls_selsct_action">Please choose the massage action!</string>
    <string name="pls_stop_action_re_edit">Please stop massaging and re-edit!</string>
    <string name="connect_failure_start">The device&#160;</string>
    <string name="connect_failure_end">&#160;connection fails. May be due to equipment hypertelorism, electricity shortage, or not open.</string>
    <string name="local_music">Music</string>
    <string name="on_line_music">Songs</string>
    <string name="local_music_no_music_start">No music</string>
    <string name="local_music_no_music_end">You can go to download the music you like in the music library!</string>
    <string name="sdcard_error">No SD card</string>
    <string name="downloaded">Downloaded</string>
    <string name="loading_music">Upload more music</string>
    <string name="music_not_data">No more music</string>
    <string name="loading_failure">Upload failed</string>
    <string name="loading">Uploading...</string>
    <string name="address">Id:&#160;</string>
    <string name="add_device">Add device</string>
    <string name="devices_max_4">Binding four devices most</string>
    <string name="devices_max_1">Binding 1 sets of devices most</string>
    <string name="search_device">Search device</string>
    <string name="searching">Searching…</string>
    <string name="devices_num_0">Please choose the binding device</string>
    <string name="search_result_txt_start">The discovery of &#160;</string>
    <string name="search_result_txt_end">&#160;new device</string>
    <string name="search_end">No new device found.\nPlease search again!</string>
    <string name="test">Test</string>
    <string name="mobile_phone_binding">Binding mobile</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="authority_web">Official website</string>
    <string name="about">About</string>
    <string name="about_title">About</string>
    <string name="change">Change</string>
    <string name="bind_phone_num_txt">You bind number:</string>
    <string name="bind_phone_success">Change successfully!</string>
    <string name="seed">Send</string>
    <string name="share_app">Share</string>
    <string name="updata_app">Version detection</string>
    <string name="latest_version">Is the latest version!</string>
    <string name="about_copyright">Mooyee Co., Ltd.\nall rights reserved.</string>
    <string name="medisana_joint_development">&#160;Joint development</string>
    <string name="click_to_select_music">Choose the music you like.</string>
    <string name="retrieving_version">Getting the version information, please wait a moment.</string>
    <string name="submitting_data">Submitting data please wait a moment.</string>
    <string name="again_to_exit">Press again to exit.</string>
    <string name="classic">Classic</string>
    <string name="physiotherapy">Traditional</string>
    <string name="zen">Zen</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="seaside">Seaside</string>
    <string name="valley">Valley</string>
    <string name="on_the_way">On passage</string>
    <string name="taking_a_nap">Rest</string>
    <string name="travel">Travel</string>
    <string name="knead">Knead</string>
    <string name="press">Press</string>
    <string name="squeeze">Squeeze</string>
    <string name="stroke">Stroke</string>
    <string name="elbow">Elbow</string>
    <string name="beat">Beat</string>
    <string name="massage">Massage</string>
    <string name="scraping">Scraping</string>
    <string name="cupping_jar">Cupping jar</string>
    <string name="acupuncture">Acupuncture</string>
    <string name="user_defined">Custom</string>
    <string name="initial_time">30:00 </string>
    <string name="personal_information">User Information</string>
    <string name="user_record">Usage Record</string>
    <string name="improve_personal_information">Complete your personal info</string>
    <string name="please_choose_your_gender">Please choose your sex</string>
    <string name="next_step">Next</string>
    <string name="last_step">Prev</string>
    <string name="please_choose_your_date_of_birth">Please choose your birthday</string>
    <string name="year">Year </string>
    <string name="month">Month </string>
    <string name="day">Day </string>
    <string name="please_choose_your_height">Please choose your height</string>
    <string name="please_choose_your_weight">Please choose your weight</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="please_enter_your_email">Please enter your email address</string>
    <string name="complete">Done</string>
    <string name="phone_number">Phone</string>
    <string name="email">Email</string>
    <string name="sex">Sex</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="age">Birthday</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="body_fat">Phone</string>
    <string name="shoulder">Shoulder</string>
    <string name="back">Back</string>
    <string name="loin">Waist</string>
    <string name="arm">Arm</string>
    <string name="thigh">Thigh</string>
    <string name="shank">Shank</string>
    <string name="please_select_your_device">Please choose your device</string>
    <string name="mooyee_m1">M1</string>
    <string name="mooyee_m2">M2</string>
    <string name="choice_device">Choice Device</string>
    <string name="please_select_the_m2_a">Please selected M2 Main Device</string>
    <string name="please_select_the_m2_b">Please selected M2 Sub Device</string>
    <string name="free_combination">Custom</string>
    <string name="expression_recognition">Emotion</string>
    <string name="recognition_of_emotion">Recognition of emotion...</string>
    <string name="pls_selsct_action_txt">Choose an action</string>
    <string name="not_affixed_to_the_body">Device is not attached to your body.</string>
    <string name="no_device_attached_to_the_body">Device is not attached to your body, please attach that before starting massage.</string>
    <string name="no_device_connect">Device disconnected,Please check.</string>
    <string name="calm">Calm</string>
    <string name="fear">Surprised</string>
    <string name="get_angry">Angry</string>
    <string name="happy">Happy</string>
    <string name="sad">Confused</string>
    <string name="sentimental">Sad</string>
    <string name="no_user_record_txt">The usage record is none</string>
    <string name="use_details">Usage details</string>
    <string name="update_success">Update success</string>
    <string name="skip">Skip</string>
    <string name="user_skip_prompt">We are sincerely to collect these information for providing you with better personalized massage service. We commit to keep all the information safety.\n\nAre you sure to skip it?</string>
    <string name="exit">Exit</string>
    <string name="exit_msg">When the device is in operation, the exit program device will stop running. Is it necessary to confirm the exit procedure?</string>
    <string name="gps_permission_title">Permission is not opened </string>
    <string name="gps_permission_msg">Go to application permission management in system setting to find the【mooyee】in the list of Apps . You need to open the location permission to find the device.</string>
    <string name="music_permission_title">Permission is not opened</string>
</resources>