<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white" >
    
    <com.releasy.android.view.TopNavLayout 
        android:id="@+id/topNavLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">    
    </com.releasy.android.view.TopNavLayout>
    

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_txt_869398"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_margin="10dp"
        android:text="@string/please_select_your_device"/>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/m1_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
           <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/m1_ic"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/color_txt_869398"
                android:textSize="16sp"
                android:text="@string/mooyee_m1"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/m2_layout"
             android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/m2_ic"
                android:scaleType="fitCenter"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/color_txt_869398"
                android:textSize="16sp"
                android:text="@string/mooyee_m2"
                />
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>