<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white" >

    <com.releasy.android.view.TopNavLayout 
        android:id="@+id/topNavLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">    
    </com.releasy.android.view.TopNavLayout>
    
    <LinearLayout
        android:id="@+id/phonenum_or_email_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_item_w2g">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="12.5dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:paddingBottom="12.5dp">
            <TextView
                android:id="@+id/phone_or_email_title_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number"
                android:textSize="16sp"
                android:textColor="@color/color_txt_848B99"/>
            <TextView
                android:id="@+id/phone_or_email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingLeft="15dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/color_txt_848B99"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_right_normal"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginLeft="30dp"
            android:background="@color/cut_off_rule"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/sex_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_item_w2g">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="12.5dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:paddingBottom="12.5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sex"
                android:textSize="16sp"
                android:textColor="@color/color_txt_848B99"/>
            <TextView
                android:id="@+id/sex_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingLeft="15dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/color_txt_848B99"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_right_normal"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginLeft="30dp"
            android:background="@color/cut_off_rule"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/age_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_item_w2g">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="12.5dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:paddingBottom="12.5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age"
                android:textSize="16sp"
                android:textColor="@color/color_txt_848B99"/>
            <TextView
                android:id="@+id/age_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingLeft="15dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/color_txt_848B99"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_right_normal"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginLeft="30dp"
            android:background="@color/cut_off_rule"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/height_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_item_w2g">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="12.5dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:paddingBottom="12.5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/height"
                android:textSize="16sp"
                android:textColor="@color/color_txt_848B99"/>
            <TextView
                android:id="@+id/height_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingLeft="15dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/color_txt_848B99"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_right_normal"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginLeft="30dp"
            android:background="@color/cut_off_rule"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/weight_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_item_w2g">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="12.5dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:paddingBottom="12.5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textSize="16sp"
                android:textColor="@color/color_txt_848B99"/>
            <TextView
                android:id="@+id/weight_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingLeft="15dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/color_txt_848B99"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_more_right_normal"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:layout_marginLeft="30dp"
            android:background="@color/cut_off_rule"/>
    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/body_fat_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="12.5dp"
            android:paddingLeft="30dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/body_fat"
                android:textSize="16sp"
                android:textColor="@color/color_txt_848B99"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/body_fat_data_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone"
        android:background="@drawable/body_fat_bg">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shoulder"
                android:layout_weight="1"
                android:textSize="16sp"
                android:drawableTop="@drawable/iconfrom_jianban"
                android:gravity="center"
                android:drawablePadding="3dp"
                android:layout_margin="10dp"
                android:textColor="@color/color_txt_A4ACBA"/>
            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_txt_D1F0FF"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_weight="1"
                android:textSize="16sp"
                android:drawableTop="@drawable/iconfrom_beibu"
                android:gravity="center"
                android:drawablePadding="3dp"
                android:layout_margin="10dp"
                android:textColor="@color/color_txt_A4ACBA"/>
            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_txt_D1F0FF"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/loin"
                android:layout_weight="1"
                android:textSize="16sp"
                android:drawableTop="@drawable/iconfrom_yaobu"
                android:gravity="center"
                android:drawablePadding="3dp"
                android:layout_margin="10dp"
                android:textColor="@color/color_txt_A4ACBA"/>
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_txt_D1F0FF"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/arm"
                android:layout_weight="1"
                android:textSize="16sp"
                android:drawableTop="@drawable/iconfrom_shoubi"
                android:gravity="center"
                android:drawablePadding="3dp"
                android:layout_margin="10dp"
                android:textColor="@color/color_txt_A4ACBA"/>
            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_txt_D1F0FF"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/thigh"
                android:layout_weight="1"
                android:textSize="16sp"
                android:drawableTop="@drawable/iconfrom_datui"
                android:gravity="center"
                android:drawablePadding="3dp"
                android:layout_margin="10dp"
                android:textColor="@color/color_txt_A4ACBA"/>
            <ImageView
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_txt_D1F0FF"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shank"
                android:layout_weight="1"
                android:textSize="16sp"
                android:drawableTop="@drawable/iconfrom_xiaotui"
                android:gravity="center"
                android:drawablePadding="3dp"
                android:layout_margin="10dp"
                android:textColor="@color/color_txt_A4ACBA"/>
        </LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>